2004-09-18  Matthias Clasen  <mclasen@redhat.com>

	* Version bump

	* === Released 2.5.3 ===

2004-09-17  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: More updates.

Thu Sep 16 18:42:46 2004  Manish Singh  <yosh@gimp.org>

	* glib/abicheck.sh: don't hardcode lengths for cut, instead split on
	the third field.

Thu Sep 16 18:15:32 2004  Manish Singh  <yosh@gimp.org>

	* glib/gstrfuncs.c (g_strncasecmp): Make it take a guint for number
	of characters, instead of a gsize. Technically this is incorrect,
	but this makes it match the prototype, and this is a deprecated
	function anyway.

2004-09-16  Matthias Clasen  <mclasen@redhat.com>

	* glib/Makefile.am (EXTRA_DIST): Add abicheck.sh

Thu Sep 16 02:03:15 2004  Matthias Clasen  <maclas@gmx.de>

	Implement the same PLT reduction technique used in GTK+:
	
	* glib/glib.symbols: Master list of symbols

	* glib/makegalias.pl: Perl script which creates galias.h

	* glib/abicheck.sh: Compares actual exports against glib.symbols 

	* glib/glib.def: Removed. This file is now generated from
	glib.symbols
	
	* glib/Makefile.am: Add rules to generate galias.h and glib.def,
	and add abicheck.sh to TESTS. Don't export _-prefixed symbols.
	
	* configure.in: Add --disable-visibility to suppress the 
	use of ELF visibility attributes.

	* glib/*.c: Include galias.h

2004-09-15  Tor Lillqvist  <tml@iki.fi>

	* glib/gwin32.c (g_win32_error_message): Convert message to
	UTF-8. Technically this breaks API, but the actual use cases in
	gdk/win32 have assumed it is UTF-8 anyway. Fix
	documentation. (#152618, Kazuki Iwamoto)

	* glib/gwin32.h: Don't define ftruncate as a macro. Was never a
	good idea, and it clashes with newest mingw headers, which have a
	ftruncate implementation as an inline function. Thanks to Dominik R.

	* glib/gwin32.c (g_win32_ftruncate): Simplify implementation, just
	call _chsize() in the C library.

2004-09-15  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Update.
